--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,3 @@
-.canvas {
-	width: 400px;
-	height: 400px;
-	border: 1px solid black;
-}
-
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -55,9 +48,14 @@ table {
 }
 
 
-
-
 body{
     background-image: url('https://images7.alphacoders.com/434/434407.jpg');
     background-size: cover;
+}
+
+.canvas {
+	width: 400px;
+	height: 400px;
+	border: 1px solid black;
+	background: white;
 }
